# XCanvas

./: BaseDrawingTool.cpp  BaseDrawingTool.h  BaseShape.cpp  BaseShape.h  CMakeLists.txt  DXFTranslator.cpp  DXFTranslator.h  DrawingToolsBar.cpp  DrawingToolsBar.h  EllipseDrawingTool.cpp  EllipseDrawingTool.h  EllipseShape.cpp  EllipseShape.h  Global.h  MyGraphicsView.cpp  MyGraphicsView.h  MyMath.h  PolylineDrawingTool.cpp  PolylineDrawingTool.h  PolylineShape.cpp  PolylineShape.h  README.md  RectDrawingTool.cpp  RectDrawingTool.h  RectShape.cpp  RectShape.h  SelectDrawingTool.cpp  SelectDrawingTool.h  Shapes.cpp  Shapes.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rulerwidget.cpp  rulerwidget.h
